# Amit33-design

./: .env.example  .gitignore  404.html  CLAUDE.md  README.md  docker-compose.yml  index.html  index.txt
.github/workflows/: ci.yml  deploy-pages.yml
404/: index.html
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/data/: condition_rules_seed.py  foods_seed.py  workout_templates_seed.py
backend/app/engines/: ai_layer.py  exercise_engine.py  health_rules.py  lifestyle_engine.py  nutrition_engine.py
backend/app/models/: __init__.py  ai_session.py  condition.py  diet_plan.py  food.py  progress.py  user.py  workout.py
backend/app/routers/: ai_chat.py  lifestyle.py  nutrition.py  progress.py  users.py  workouts.py
backend/app/schemas/: ai.py  nutrition.py  progress.py  user.py  workout.py
backend/app/utils/: calculators.py
backend/scripts/: seed_db.py
dashboard/: index.html  index.txt
dashboard/ask/: index.html  index.txt
dashboard/lifestyle/: index.html  index.txt
dashboard/nutrition/: index.html  index.txt
dashboard/progress/: index.html  index.txt
dashboard/recipes/: index.html  index.txt
dashboard/report/: index.html  index.txt
dashboard/workouts/: index.html  index.txt
frontend/: .env.production  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/app/: page.tsx  (+2 more)
onboarding/activity/: index.html  index.txt
onboarding/conditions/: index.html  index.txt
onboarding/diet/: index.html  index.txt
onboarding/goals/: index.html  index.txt
(+226 files in other folders)
